# ues

./: .env  README.md  TODO.md  main.py  pyproject.toml
.github/: copilot-instructions.md
api/: __init__.py  dependencies.py  exceptions.py  models.py  utils.py
chat_logs/: chat_api_client_library_plan.json  chat_api_models_p1.json  chat_api_tests_cleanup_and_quickstart.json  chat_api_tests_simulation.json  chat_calendar.json  chat_copilot_instructions.json  chat_core_infra_1.json  chat_email_modality.json  chat_fast_api_tutorial.json  chat_instructions_update.json  chat_location_time.json  chat_more_model_docs.json  chat_rest_api_docs.json  chat_sms.json  chat_test_dir_restructure.json  chat_unit_tests_3.json  chat_weather_chat.json
client/: __init__.py  _base.py  _calendar.py  _chat.py  _email.py  _environment.py  _events.py  _http.py  _location.py  _simulation.py  _sms.py  _time.py  _weather.py  client.py  exceptions.py  models.py
docs/: API_CLIENT.md  API_ERROR_HANDLING.md  ENVIRONMENT.md  MODALITY_MODELS.md  MODALITY_ROUTES.md  MODALITY_UNDO_NOTES.md  MODALITY_UNIT_TESTS.md  ORCHESTRATION.md  REST_API.md  SIMULATION_ENGINE.md  SIMULATION_EVENT.md  SIMULATOR_TIME.md
models/: __init__.py  agent.py  base_input.py  base_state.py  environment.py  event.py  queue.py  simulation.py  time.py  undo.py
tests/: API_TESTING_GUIDELINES.md  __init__.py  conftest.py  test_calendar_state.py  test_chat_input.py  test_chat_state.py  test_email_input.py  test_event.py  test_location_input.py  test_location_state.py  test_queue.py  test_sms_input.py  test_sms_state.py  (+4 more)
(+174 files in other folders)
